Forked for Brett - added ability to force responsive mode off and always show the mobile version.

--- a/example/index.html
+++ b/example/index.html
@@ -42,7 +42,9 @@
 		<script src="../dist/js/reaktion.js"></script>
 		<script>
 		$(function(){
-			$('.nav').reaktion();
+			$('.nav').reaktion({
+				mobileOnly: true
+			});
 		});
 		</script>
 	</body>
