CSS-based approach for multiple levels in menus.

--- a/example/index.html
+++ b/example/index.html
@@ -28,7 +28,31 @@
 						<li><a href="#">Web Design</a></li>
 						<li><a href="#">Web Development</a></li>
 						<li><a href="#">eCommerce</a></li>
-						<li><a href="#">Graphic Design</a></li>
+						<li>
+							<a href="#">Graphic Design</a>
+							<ul>
+								<li><a href="#">G1</a></li>
+								<li><a href="#">G2</a></li>
+								<li>
+									<a href="#">G3</a>
+									<ul>
+										<li><a href="#">A1</a></li>
+										<li><a href="#">A2</a></li>
+										<li>
+											<a href="#">A3</a>
+											<ul>
+												<li><a href="#">C1</a></li>
+												<li><a href="#">C2</a></li>
+												<li><a href="#">C3</a></li>
+												<li><a href="#">C4</a></li>
+											</ul>
+										</li>
+										<li><a href="#">A4</a></li>
+									</ul>
+								</li>
+								<li><a href="#">G4</a></li>
+							</ul>
+						</li>
 					</ul>
 				</li>
 				<li><a href="#">Blog</a></li>
